--- a/index.html
+++ b/index.html
@@ -10,22 +10,26 @@
 </head>
 
 <body>
+    <main class="page">
     <header>
-        <nav class="navbar">
-            <div>
-                <a href="index.html" class="botoesNav"><img src="./Imagens/Logo_Studio.png"
-                        alt="Studio Amanda Souza Logo" width="70px"></a>
-            </div>
-            <div>
-                <a href="sobre.html" class="botoesNav">Sobre</a>
-            </div>
-            <div>
-                <a href="serviços.html" class="botoesNav">Serviços</a>
-            </div>
-            <div>
-                <a href="agendar.html" class="botoesNav">Agendar</a>
-            </div>
-        </nav>
+      <nav class="navbar">
+        <div>
+          <a href="index.html" class="botoesNav logo"><img src="./Imagens/Logo_Studio.png"
+              alt="Studio Amanda Souza Logo" width="70"></a>
+        </div>
+        <div>
+          <a href="sobre.html" class="botoesNav">Sobre</a>
+        </div>
+        <div>
+          <a href="serviços.html" class="botoesNav">Serviços</a>
+        </div>
+        <div>
+          <a href="curso.html" class="botoesNav">Curso</a>
+        </div>
+        <div>
+          <a href="agendar.html" class="botoesNav">Agendar</a>
+        </div>
+      </nav>
     </header>
     <main>
         <section class="pgIcinal">
@@ -40,7 +44,6 @@
     <footer>
         <p>© 2024 Studio Amanda Souza. Todos os direitos reservados.</p>
     </footer>
-    <script src="script.js"></script>
 </body>
 
 </html>
